--- a/anlizhanshi.html
+++ b/anlizhanshi.html
@@ -190,6 +190,7 @@
 			 <p class="eight_right_p3">To satisfy you is our goal</p>
 			 <p class="eight_right_p4">GOIND JASK Say _</p>
 		</div>
+		<div class="eight_middle"></div>
 	</div>
 	<div id="three">
 		<div class="three_top">
