--- a/index.html
+++ b/index.html
@@ -228,30 +228,32 @@
 				<div class="anli_neirong_neirong team_neirong_neirong">
 					<p>项目团队成员来自13个国家顶尖家具行业专家，曾获得国内外多项大奖，承接各类建筑事物，项目资质齐全。</p>
 				</div>
-				<div class="team_img1">
-					<img src="img/aa13.png" alt="">
-					<h2>JONSON.YNAG</h2>
-				</div>
-				<div class="team_img2">
-					<img src="img/aa18.png" alt="">
-					<h2>JONSON.YNAG</h2>
-				</div>
-				<div class="team_img3">
-					<img src="img/aa15.png" alt="">
-					<h2>JONSON.YNAG</h2>
-				</div>
-				<div class="team_img4">
-					<img src="img/aa16.png" alt="">
-					<h2>JONSON.YNAG</h2>
-				</div>
-				<div class="team_leftimg">
-					<div class="team_img5">
-						<img src="img/aa15.png" alt="">
+				<div class="team_middle">
+					<div class="team_img1">
+						<img src="img/aa13.png" alt="">
+						<h2>JONSON.YNAG</h2>
 					</div>
-				</div>
-				<div class="team_img6">
-					<img src="img/999.png" alt="">
-				</div>
+					<div class="team_img2">
+						<img src="img/aa18.png" alt="">
+						<h2>JONSON.YNAG</h2>
+					</div>
+					<div class="team_img3">
+						<img src="img/aa15.png" alt="">
+						<h2>JONSON.YNAG</h2>
+					</div>
+					<div class="team_img4">
+						<img src="img/aa16.png" alt="">
+						<h2>JONSON.YNAG</h2>
+					</div>
+					<div class="team_leftimg">
+						<div class="team_img5">
+							<img src="img/aa15.png" alt="">
+						</div>
+					</div>
+					<div class="team_img6">
+						<img src="img/999.png" alt="">
+					</div>
+					</div>
 			</div>
 		</div>
 	<!-- 团队介绍结束 -->
